--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -10,8 +10,12 @@
   "author": "PKB",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.20.7",
     "next": "^9.5.5",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "^8.16.0",
