--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -13,8 +13,11 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.20.7",
     "next": "^9.5.5",
+    "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.8.1",
+    "react-redux": "^8.0.2",
     "react-scripts": "^5.0.1",
+    "redux": "4.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
