--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.2",
     "react-scripts": "^5.0.1",
     "redux": "4.1",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
