--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.8.1",
     "react-redux": "^8.0.2",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "4.1",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.5"
