--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.20.7",
+    "axios": "^0.27.2",
     "next": "^9.5.5",
     "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.8.1",
@@ -20,6 +21,7 @@
     "react-slick": "^0.29.0",
     "redux": "4.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
